sanitize swagger documentation
